# lib/db/src/schema/index.ts
@@ -27,3 +27,5 @@ export * from "./support-threads";
 export * from "./support-messages";
 export * from "./bundles";
 export * from "./memories";
+export * from "./conversations";
+export * from "./messages";
